# prompt-optimisation

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  Dockerfile  README.md  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: ci_cd.yml
diagrams/: authoritarian.drawio  hierarchical.drawio  market.drawio  reflection.drawio
human-eval/human_eval/: data.py  evaluation.py
promptbench/promptbench/models/: __init__.py  models.py
src/: agent_suite.py
src/algorithms/: authoritarian.ipynb  hierarchical.ipynb  market.ipynb  reviewer_swarm.py  utils.py
src/algorithms/decomposed_ea/: evaluation.py  genetic_agents.py  run.py
src/algorithms/legacy/: bidding_v2.ipynb  reflection.ipynb  reviewer_swarm.ipynb
src/conversations/claude-3-5-sonnet-20240620/: conversations_authoritarian_0.json  conversations_hierarchical_0.json  conversations_market_0.json
src/conversations/claude-3-haiku-20240307/: conversations_authoritarian_0.json
src/conversations/gpt-3.5-turbo/: conversations_authoritarian_0.json  conversations_market_0.json
src/conversations/gpt-4o-mini/: conversations_authoritarian_0.json  conversations_hierarchcial_0.json
src/data/: mutator_prompts.py  thinking_styles.py
src/notebooks/: authoritarian.ipynb  decomposed_ea.ipynb  hierarchical.ipynb  market.ipynb  promptbench_eval.ipynb  reflection.ipynb  reviewer_swarm.ipynb
src/outputs/: plots.ipynb
src/prompts/: gsm8k.py  human_eval.py  sst2.py
src/tests/: run_conversational_analysis.ipynb  run_humaneval.ipynb  run_promptbench.ipynb  significance_testing.ipynb
(+421 files in other folders)
