[tool.poetry]
name = "prompt-optimisation"
version = "0.1.0"
description = "MSc research project exploring autonomous prompt optimisation."
authors = ["iwatson <jsmith@zilo.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
